<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentBookingReview">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutBookingReviewNotSignedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvNeedLoginHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="92dp"
            android:gravity="center"
            android:text="@string/need_to_login_message"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnSignInReview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btnSignInReview"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_rounded_red"
            android:elevation="8dp"
            android:paddingEnd="86dp"
            android:paddingStart="86dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUpReview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNeedLoginHint" />

        <Button
            android:id="@+id/btnSignUpReview"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:background="@drawable/button_rounded_white"
            android:elevation="8dp"
            android:paddingEnd="80dp"
            android:paddingStart="80dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@+id/tvOrReview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignInReview"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvOrReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/or"
            app:layout_constraintBottom_toTopOf="@+id/btnGoogleReview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUpReview"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleReview"
            android:layout_width="128dp"

            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrReview" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutBookingReviewSignedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvLoggedAsHintReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/logged_in_as_hint"
            app:layout_constraintBottom_toTopOf="@+id/tvEmailReview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEmailReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSubmitBooking"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/book_a_table"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>